@@ -1,3 +1,4 @@
+
 package cluster.radial.symmetry.process;
 
 import java.awt.Rectangle;
@@ -38,13 +39,17 @@ import radial.symmetry.utils.IOUtils;
 import util.opencsv.CSVReader;
 
 public class ExtraPreprocess {
-	// this class performs extra preprocessing of the images: 
-	// 1. calculate the median intensity per plane (consider only roi pixels) = S_i
+	// this class performs extra preprocessing of the images:
+	// 1. calculate the median intensity per plane (consider only roi pixels) =
+	// S_i
 	// 2. subtract min (or median) of S_i from each pixel including outer roi
 	// 3. multiple the whole image by a factor p so that 1 values are 1's again
-	// 4. perform the plane dependent multiplication (z-plane fix of the intensity drop) 
+	// 4. perform the plane dependent multiplication (z-plane fix of the intensity
+	// drop)
 
-	public static void runExtraPreprocess(File pathImages, File pathDb, File pathImagesMedian) {
+	public static void runExtraPreprocess(File pathImages, File pathDb,
+		File pathImagesMedian)
+	{
 		// parse the db with smFish labels and good looking images
 		ArrayList<ImageData> imageData = IOUtils.readDb(pathDb);
 
@@ -53,11 +58,14 @@ public class ExtraPreprocess {
 		for (ImageData imageD : imageData) {
 			currentIdx++;
 			// unprocessed path
-			String inputImagePath = pathImages.getAbsolutePath() + "/" + imageD.getFilename() + ".tif";
-			// processed path 
-			String outputImagePath = pathImagesMedian.getAbsolutePath() + "/" + imageD.getFilename() + ".tif";
+			String inputImagePath = pathImages.getAbsolutePath() + "/" + imageD
+				.getFilename() + ".tif";
+			// processed path
+			String outputImagePath = pathImagesMedian.getAbsolutePath() + "/" + imageD
+				.getFilename() + ".tif";
 
-			System.out.println( currentIdx + "/" + imageData.size() + ": " + inputImagePath);
+			System.out.println(currentIdx + "/" + imageData.size() + ": " +
+				inputImagePath);
 			// System.out.println(outputImagePath);
 			// System.out.println(roiImagePath);
 
@@ -66,73 +74,78 @@ public class ExtraPreprocess {
 				medianOfMedian(new File(inputImagePath), new File(outputImagePath));
 			}
 			else {
-				System.out.println("Preprocess.java: " + inputImagePath + " file is missing");
+				System.out.println("Preprocess.java: " + inputImagePath +
+					" file is missing");
 			}
 		}
 	}
 
-
-	// read the z and I values from the csbv file 
-	public static ArrayList<float []> readCsv(File path) {
+	// read the z and I values from the csbv file
+	public static ArrayList<float[]> readCsv(File path) {
 		final int nColumns = 5;
 		final int zIndex = 3;
 		final int iIndex = 4;
 
 		CSVReader reader = null;
-		String[] nextLine = new String [nColumns];
+		String[] nextLine = new String[nColumns];
 
-		ArrayList<float []> zI = new ArrayList<>();
+		ArrayList<float[]> zI = new ArrayList<>();
 
 		try {
-			int toSkip = 1; 
-			reader = new CSVReader(new FileReader(path), '\t', CSVReader.DEFAULT_QUOTE_CHARACTER, toSkip);
+			int toSkip = 1;
+			reader = new CSVReader(new FileReader(path), '\t',
+				CSVReader.DEFAULT_QUOTE_CHARACTER, toSkip);
 			// while there are rows in the file
 			while ((nextLine = reader.readNext()) != null) {
 
 				float z = Float.parseFloat(nextLine[zIndex]);
 				float I = Float.parseFloat(nextLine[iIndex]);
 
-				zI.add(new float[] {z, I});
+				zI.add(new float[] { z, I });
 
 			}
-		} catch (Exception e) {
+		}
+		catch (Exception e) {
 			e.printStackTrace();
 		}
 
 		return zI;
 	}
 
-
-
 	public static ArrayList<float[]> sortValues(ArrayList<float[]> zI) {
 		Collections.sort(zI, new zComparator());
 		return zI;
 	}
 
-	public static ArrayList<float []> getMedianPerSlice(ArrayList<float[]> zI, long zSlices){
+	public static ArrayList<float[]> getMedianPerSlice(ArrayList<float[]> zI,
+		long zSlices)
+	{
 
 		ArrayList<float[]> medianZI = new ArrayList<>();
 
 		for (int z = 0; z < zSlices; z++) {
 			ArrayList<float[]> list = new ArrayList<>();
-			for (float [] item : zI) {
-				if(Math.round(item[0]) == z) {
+			for (float[] item : zI) {
+				if (Math.round(item[0]) == z) {
 					list.add(item);
 				}
 			}
 			if (!list.isEmpty()) {
 				Collections.sort(list, new iComparator());
-				medianZI.add(list.get(list.size()/2));
-				System.out.println(list.get(list.size()/2)[0] + ", "+ list.get(list.size()/2)[1]);
+				medianZI.add(list.get(list.size() / 2));
+				System.out.println(list.get(list.size() / 2)[0] + ", " + list.get(list
+					.size() / 2)[1]);
 			}
 		}
 		return medianZI;
 	}
 
-
 	// FIXME: CHECK THAT THIS ONE IS ACTUALLY WORKING
-	// calculates the median intensity per-slice and returns the set of z-points and intensities
-	public static ArrayList<float []> getMedianPerSlice(ArrayList<Spot> spots, ArrayList<Float> intensity, long zSlices){
+	// calculates the median intensity per-slice and returns the set of z-points
+	// and intensities
+	public static ArrayList<float[]> getMedianPerSlice(ArrayList<Spot> spots,
+		ArrayList<Float> intensity, long zSlices)
+	{
 		ArrayList<float[]> medianZI = new ArrayList<>();
 
 		for (int z = 0; z < zSlices; z++) {
@@ -149,58 +162,63 @@ public class ExtraPreprocess {
 			// there are points for this specific zSlice
 			if (!indices.isEmpty()) {
 				// grabs only necessary intensity values
-				List<Float> fIntensity = indices.stream().map(intensity::get).collect(Collectors.toList());
-				List<Spot> fSpots = indices.stream().map(spots::get).collect(Collectors.toList());
+				List<Float> fIntensity = indices.stream().map(intensity::get).collect(
+					Collectors.toList());
+				List<Spot> fSpots = indices.stream().map(spots::get).collect(Collectors
+					.toList());
 				// sort according to the intensities
 				IndexComparator comparator = new IndexComparator(fIntensity);
 				Integer[] intensityIndices = comparator.createIndexArray();
 				Arrays.sort(intensityIndices, comparator);
-				// now indices will give me the result I am looking for 
-				int id = intensityIndices[intensityIndices.length/2];
+				// now indices will give me the result I am looking for
+				int id = intensityIndices[intensityIndices.length / 2];
 
-				medianZI.add(new float[]{fSpots.get(id).getFloatPosition(2), fIntensity.get(id)});
-			} 
+				medianZI.add(new float[] { fSpots.get(id).getFloatPosition(2),
+					fIntensity.get(id) });
+			}
 		}
 		return medianZI;
 	}
 
-	public static class zComparator implements Comparator<float[]>{
+	public static class zComparator implements Comparator<float[]> {
+
 		@Override
 		public int compare(float[] e1, float[] e2) {
-			int result = 0; // same 
+			int result = 0; // same
 			if (e1[0] < e2[0]) {
 				result = -1;
-			} else if (e1[0] > e2[0]) {
+			}
+			else if (e1[0] > e2[0]) {
 				result = 1;
 			}
 			return result;
 		}
 	}
 
-	public static class iComparator implements Comparator<float[]>{
+	public static class iComparator implements Comparator<float[]> {
+
 		@Override
 		public int compare(float[] e1, float[] e2) {
-			int result = 0; // same 
+			int result = 0; // same
 			if (e1[1] < e2[1]) {
 				result = -1;
-			} else if (e1[1] > e2[1]) {
+			}
+			else if (e1[1] > e2[1]) {
 				result = 1;
 			}
 			return result;
 		}
 	}
 
-	public static class IndexComparator implements Comparator<Integer>
-	{
+	public static class IndexComparator implements Comparator<Integer> {
+
 		private List<Float> intensity;
 
-		public IndexComparator(List<Float> intensity)
-		{
+		public IndexComparator(List<Float> intensity) {
 			this.intensity = intensity;
 		}
 
-		public Integer[] createIndexArray()
-		{
+		public Integer[] createIndexArray() {
 			int n = intensity.size();
 			Integer[] indexes = new Integer[n];
 			for (int i = 0; i < n; i++)
@@ -209,111 +227,119 @@ public class ExtraPreprocess {
 		}
 
 		@Override
-		public int compare(Integer index1, Integer index2)
-		{
+		public int compare(Integer index1, Integer index2) {
 			// Autounbox from Integer to int to use as array indexes
 			return intensity.get(index1).compareTo(intensity.get(index2));
 		}
 	}
 
-	//	public static ImagePlus fixIntensitiesOnlySpots(ImagePlus imp, File spotsFirstRunFilename) {
-	//		Img<FloatType> img = ImageJFunctions.wrap(imp);
+	// public static ImagePlus fixIntensitiesOnlySpots(ImagePlus imp, File
+	// spotsFirstRunFilename) {
+	// Img<FloatType> img = ImageJFunctions.wrap(imp);
 	//
-	//		// System.out.println(ip.getWidth() + " : " + ip.getHeight());
-	//		// System.out.println(imp.getWidth() + " : " + imp.getHeight());
+	// // System.out.println(ip.getWidth() + " : " + ip.getHeight());
+	// // System.out.println(imp.getWidth() + " : " + imp.getHeight());
 	//
-	//		// we expect this values to be in the ROI
-	//		ArrayList<float []> zI = readCsv(spotsFirstRunFilename);
+	// // we expect this values to be in the ROI
+	// ArrayList<float []> zI = readCsv(spotsFirstRunFilename);
 	//
-	//		// fitting part
-	//		boolean includeIntercept = true; // use constant term
-	//		SimpleRegression sr = new SimpleRegression(includeIntercept);
-	//		// perform correction in 3D only
-	//		int numDimensions = 3;
+	// // fitting part
+	// boolean includeIntercept = true; // use constant term
+	// SimpleRegression sr = new SimpleRegression(includeIntercept);
+	// // perform correction in 3D only
+	// int numDimensions = 3;
 	//
-	//		double zMin = Double.MAX_VALUE;
+	// double zMin = Double.MAX_VALUE;
 	//
-	//		//		for (float [] item : zI) {
-	//		//			float z = item[0];
-	//		//			float I = item[1];
-	//		//			sr.addData(z, I);
-	//		//			if (z < zMin)
-	//		//				zMin = z;
-	//		//		}
+	// // for (float [] item : zI) {
+	// // float z = item[0];
+	// // float I = item[1];
+	// // sr.addData(z, I);
+	// // if (z < zMin)
+	// // zMin = z;
+	// // }
 	//
-	//		ArrayList<float[]> medianZI =  getMedianPerSlice(zI,img.dimension(numDimensions - 1));
+	// ArrayList<float[]> medianZI =
+	// getMedianPerSlice(zI,img.dimension(numDimensions - 1));
 	//
-	//		for (float [] item : medianZI) {
-	//			float z = item[0];
-	//			float I = item[1];
-	//			sr.addData(z, I);
-	//			if (z < zMin)
-	//				zMin = z;
-	//		}
-	//
-	//
-	//		double slope = sr.getSlope();
-	//		double intercept = sr.getIntercept();
-	//		// at this point the fitting i already done
-	//
-	//		// double zMin = getZMin(pixi, numDimensions);
-	//
-	//		System.out.println("zMin:" + zMin);
-	//		System.out.println("params are:" + slope + " : " + intercept);
+	// for (float [] item : medianZI) {
+	// float z = item[0];
+	// float I = item[1];
+	// sr.addData(z, I);
+	// if (z < zMin)
+	// zMin = z;
+	// }
 	//
 	//
-	//		Cursor<FloatType> c = img.cursor();
+	// double slope = sr.getSlope();
+	// double intercept = sr.getIntercept();
+	// // at this point the fitting i already done
 	//
-	//		while(c.hasNext()) {
-	//			c.fwd();
+	// // double zMin = getZMin(pixi, numDimensions);
 	//
-	//			int z = c.getIntPosition(2);
-	//			float I = c.get().get();
-	//			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
+	// System.out.println("zMin:" + zMin);
+	// System.out.println("params are:" + slope + " : " + intercept);
 	//
-	//			NumberFormat formatter = new DecimalFormat("0.#####E0");
-	//			// System.out.println(formatter.format((float)(I)) +" => " + formatter.format((float)(I + dI)));
 	//
-	//			c.get().set((float)(I + dI));
-	//		}
+	// Cursor<FloatType> c = img.cursor();
 	//
-	//		return imp;
-	//	}
+	// while(c.hasNext()) {
+	// c.fwd();
+	//
+	// int z = c.getIntPosition(2);
+	// float I = c.get().get();
+	// double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+	// intercept);
+	//
+	// NumberFormat formatter = new DecimalFormat("0.#####E0");
+	// // System.out.println(formatter.format((float)(I)) +" => " +
+	// formatter.format((float)(I + dI)));
+	//
+	// c.get().set((float)(I + dI));
+	// }
+	//
+	// return imp;
+	// }
 
-	public static ArrayList<Point> copySpots(ArrayList<Spot> spots, ArrayList<Float> intensity){
+	public static ArrayList<Point> copySpots(ArrayList<Spot> spots,
+		ArrayList<Float> intensity)
+	{
 		final ArrayList<Point> points = new ArrayList<>();
-		
+
 		for (Spot spot : spots) {
 			// lazy
 			int numDimensions = 3;
-			
-			double [] loc = new double [numDimensions];
+
+			double[] loc = new double[numDimensions];
 			spot.localize(loc);
-			points.add(new Point(new double[] {loc[2], intensity.get(spots.indexOf(spot))}));
+			points.add(new Point(new double[] { loc[2], intensity.get(spots.indexOf(
+				spot)) }));
 		}
 		return points;
 	}
-	
-	
-	public static Img<FloatType> fixIntensitiesOnlySpotsRansac(Img<FloatType> img, ArrayList<Spot> spots, ArrayList<Float> intensity, double [] gCoeff, boolean doZcorrection) {
-	
+
+	public static Img<FloatType> fixIntensitiesOnlySpotsRansac(Img<FloatType> img,
+		ArrayList<Spot> spots, ArrayList<Float> intensity, double[] gCoeff,
+		boolean doZcorrection)
+	{
+
 		int numDimensions = 3;
-		
-		// fitting part 
+
+		// fitting part
 		int degree = gCoeff.length - 1;
-		
+
 		int nIterations = 1000;
 		double epsilon = 0.1;
 		double minInlierRatio = 0.5;
 		QuadraticFunction qf = new QuadraticFunction();
-		
+
 		ArrayList<Point> points = copySpots(spots, intensity);
 		final ArrayList<PointFunctionMatch> candidates = new ArrayList<>();
 		final ArrayList<PointFunctionMatch> inliers = new ArrayList<>();
-		
+
 		for (final Point p : points)
 			candidates.add(new PointFunctionMatch(p));
-		
+
 		try {
 			qf.ransac(candidates, inliers, nIterations, epsilon, minInlierRatio);
 			qf.fit(candidates);
@@ -321,83 +347,90 @@ public class ExtraPreprocess {
 		catch (NotEnoughDataPointsException | IllDefinedDataPointsException exc) {
 			exc.printStackTrace();
 		}
-		
+
 		for (int j = 0; j <= degree; j++)
 			gCoeff[j] = qf.getCoefficient(j);
-		
+
 		float zMin = Float.MAX_VALUE;
 		for (Spot spot : spots)
-			if (spot.getFloatPosition(numDimensions - 1) < zMin)
-				zMin = spot.getFloatPosition(numDimensions - 1);
-		
+			if (spot.getFloatPosition(numDimensions - 1) < zMin) zMin = spot
+				.getFloatPosition(numDimensions - 1);
+
 		// at this point the fitting i already done
 		System.out.println("zMin:" + zMin);
-		System.out.println("params are:" + qf.getCoefficient(0) + " : " + qf.getCoefficient(1) + " : " + qf.getCoefficient(2));
-		
+		System.out.println("params are:" + qf.getCoefficient(0) + " : " + qf
+			.getCoefficient(1) + " : " + qf.getCoefficient(2));
+
 		int currentSlice = 0;
 
 		// we z correct the whole image, not only the embryo
 		Cursor<FloatType> c = img.cursor();
-		while(c.hasNext()) {
+		while (c.hasNext()) {
 			c.fwd();
 			float z = c.getFloatPosition(numDimensions - 1);
 			float I = c.get().get();
 
-			//			// old way to fix the intensities
-			//			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
-			//			NumberFormat formatter = new DecimalFormat("0.#####E0");
-			//			// System.out.println(formatter.format((float)(I)) +" => " + formatter.format((float)(I + dI)));
-			//			c.get().set((float)(I + dI));
+			// // old way to fix the intensities
+			// double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+			// intercept);
+			// NumberFormat formatter = new DecimalFormat("0.#####E0");
+			// // System.out.println(formatter.format((float)(I)) +" => " +
+			// formatter.format((float)(I + dI)));
+			// c.get().set((float)(I + dI));
 
 			double fixFactor = polyFunc(zMin, gCoeff) / polyFunc(z, gCoeff);
-			// DEBUG: 
+			// DEBUG:
 //			if ((int) z != currentSlice)
 //				System.out.println("z: " + (currentSlice++) + ", factor=: " + fixFactor);
-			c.get().set((float)(I*fixFactor));
+			c.get().set((float) (I * fixFactor));
 		}
 
-		// TODO: REMOVE hardcode! 
-		// BatchProcess.saveResult(new File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-05-02-13-33-11-median-median-first-test/csv/FIRST_RUN.csv"), spots, intensity);
-		
+		// TODO: REMOVE hardcode!
+		// BatchProcess.saveResult(new
+		// File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-05-02-13-33-11-median-median-first-test/csv/FIRST_RUN.csv"),
+		// spots, intensity);
+
 		// TODO: z-correct the intensities and return them here, too
 		if (doZcorrection) {
-			for(int j = 0; j < spots.size(); j++) {
+			for (int j = 0; j < spots.size(); j++) {
 				float z = spots.get(j).getFloatPosition(numDimensions - 1);
 				float I = intensity.get(j);
 
 				double fixFactor = polyFunc(zMin, gCoeff) / polyFunc(z, gCoeff);
-				intensity.set(j, (float)(I*fixFactor));
-			} 
+				intensity.set(j, (float) (I * fixFactor));
+			}
 		}
 
 		return img;
 		// return ImageJFunctions.wrap(img, "");
 	}
-	
-	
+
 	// FIXME: Check that this function is actually working
-	public static ImagePlus fixIntensitiesOnlySpots(Img<FloatType> img, ArrayList<Spot> spots, ArrayList<Float> intensity, double [] gCoeff, boolean doZcorrection) {
+	public static ImagePlus fixIntensitiesOnlySpots(Img<FloatType> img,
+		ArrayList<Spot> spots, ArrayList<Float> intensity, double[] gCoeff,
+		boolean doZcorrection)
+	{
 		// Img<FloatType> img = ImageJFunctions.wrap(imp);
 
 		// fitting part
 		int degree = gCoeff.length - 1;
 		WeightedObservedPoints obs = new WeightedObservedPoints();
 		PolynomialCurveFitter pcf = PolynomialCurveFitter.create(degree);
-		
+
 		// perform correction in 3D only
 		int numDimensions = 3;
 
 		double zMin = Double.MAX_VALUE;
 		// double zMin = getZMin(spots, numDimensions);
 
-		ArrayList<float[]> medianZI = getMedianPerSlice(spots, intensity, img.dimension(numDimensions - 1));
+		ArrayList<float[]> medianZI = getMedianPerSlice(spots, intensity, img
+			.dimension(numDimensions - 1));
 
 		for (int j = 0; j < medianZI.size(); ++j) {
 			float z = medianZI.get(j)[0];
 			float I = medianZI.get(j)[1];
 			obs.add(z, I);
-			if (z < zMin)
-				zMin = z;
+			if (z < zMin) zMin = z;
 		}
 
 		final double[] coeff = pcf.fit(obs.toList());
@@ -406,50 +439,56 @@ public class ExtraPreprocess {
 
 		// at this point the fitting i already done
 		System.out.println("zMin:" + zMin);
-		System.out.println("params are:" + coeff[0] + " : " + coeff[1] + " : " + coeff[2]);
+		System.out.println("params are:" + coeff[0] + " : " + coeff[1] + " : " +
+			coeff[2]);
 
 		int currentSlice = 0;
 
 		// we z correct the whole image, not only the embryo
 		Cursor<FloatType> c = img.cursor();
-		while(c.hasNext()) {
+		while (c.hasNext()) {
 			c.fwd();
 			float z = c.getFloatPosition(numDimensions - 1);
 			float I = c.get().get();
 
-			//			// old way to fix the intensities
-			//			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
-			//			NumberFormat formatter = new DecimalFormat("0.#####E0");
-			//			// System.out.println(formatter.format((float)(I)) +" => " + formatter.format((float)(I + dI)));
-			//			c.get().set((float)(I + dI));
+			// // old way to fix the intensities
+			// double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+			// intercept);
+			// NumberFormat formatter = new DecimalFormat("0.#####E0");
+			// // System.out.println(formatter.format((float)(I)) +" => " +
+			// formatter.format((float)(I + dI)));
+			// c.get().set((float)(I + dI));
 
 			double fixFactor = polyFunc(zMin, coeff) / polyFunc(z, coeff);
-			// DEBUG: 
-			if ((int) z != currentSlice)
-				System.out.println("z: " + (currentSlice++) + ", factor=: " + fixFactor);
-			c.get().set((float)(I*fixFactor));
+			// DEBUG:
+			if ((int) z != currentSlice) System.out.println("z: " + (currentSlice++) +
+				", factor=: " + fixFactor);
+			c.get().set((float) (I * fixFactor));
 		}
 
-		// TODO: REMOVE hardcode! 
-		// BatchProcess.saveResult(new File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-05-02-13-33-11-median-median-first-test/csv/FIRST_RUN.csv"), spots, intensity);
-		
+		// TODO: REMOVE hardcode!
+		// BatchProcess.saveResult(new
+		// File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-05-02-13-33-11-median-median-first-test/csv/FIRST_RUN.csv"),
+		// spots, intensity);
+
 		// TODO: z-correct the intensities and return them here, too
 		if (doZcorrection) {
-			for(int j = 0; j < spots.size(); j++) {
+			for (int j = 0; j < spots.size(); j++) {
 				float z = spots.get(j).getFloatPosition(numDimensions - 1);
 				float I = intensity.get(j);
 
 				double fixFactor = polyFunc(zMin, coeff) / polyFunc(z, coeff);
-				intensity.set(j, (float)(I*fixFactor));
-			} 
+				intensity.set(j, (float) (I * fixFactor));
+			}
 		}
 
 		return ImageJFunctions.wrap(img, "");
 	}
-	
-	
+
 	// FIXME: Check that this function is actually working
-	public static ImagePlus fixIntensitiesOnlySpots1(Img<FloatType> img, ArrayList<Spot> spots, ArrayList<Float> intensity, boolean doZcorrection) {
+	public static ImagePlus fixIntensitiesOnlySpots1(Img<FloatType> img,
+		ArrayList<Spot> spots, ArrayList<Float> intensity, boolean doZcorrection)
+	{
 		// Img<FloatType> img = ImageJFunctions.wrap(imp);
 
 		// fitting part
@@ -461,14 +500,14 @@ public class ExtraPreprocess {
 		double zMin = Double.MAX_VALUE;
 		// double zMin = getZMin(spots, numDimensions);
 
-		ArrayList<float[]> medianZI = getMedianPerSlice(spots, intensity, img.dimension(numDimensions - 1));
+		ArrayList<float[]> medianZI = getMedianPerSlice(spots, intensity, img
+			.dimension(numDimensions - 1));
 
 		for (int j = 0; j < medianZI.size(); ++j) {
 			float z = medianZI.get(j)[0];
 			float I = medianZI.get(j)[1];
 			sr.addData(z, I);
-			if (z < zMin)
-				zMin = z;
+			if (z < zMin) zMin = z;
 		}
 
 		double slope = sr.getSlope();
@@ -482,50 +521,57 @@ public class ExtraPreprocess {
 
 		// we z correct the whole image, not only the embryo
 		Cursor<FloatType> c = img.cursor();
-		while(c.hasNext()) {
+		while (c.hasNext()) {
 			c.fwd();
 			float z = c.getFloatPosition(numDimensions - 1);
 			float I = c.get().get();
 
-			//			// old way to fix the intensities
-			//			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
-			//			NumberFormat formatter = new DecimalFormat("0.#####E0");
-			//			// System.out.println(formatter.format((float)(I)) +" => " + formatter.format((float)(I + dI)));
-			//			c.get().set((float)(I + dI));
+			// // old way to fix the intensities
+			// double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+			// intercept);
+			// NumberFormat formatter = new DecimalFormat("0.#####E0");
+			// // System.out.println(formatter.format((float)(I)) +" => " +
+			// formatter.format((float)(I + dI)));
+			// c.get().set((float)(I + dI));
 
-			double fixFactor = linearFunc(zMin, slope, intercept) / linearFunc(z, slope, intercept);
-			// DEBUG: 
-			if ((int) z != currentSlice)
-				System.out.println("z: " + (currentSlice++) + ", factor=: " + fixFactor);
-			c.get().set((float)(I*fixFactor));
+			double fixFactor = linearFunc(zMin, slope, intercept) / linearFunc(z,
+				slope, intercept);
+			// DEBUG:
+			if ((int) z != currentSlice) System.out.println("z: " + (currentSlice++) +
+				", factor=: " + fixFactor);
+			c.get().set((float) (I * fixFactor));
 		}
 
-		// TODO: REMOVE hardcode! 
-		// BatchProcess.saveResult(new File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-04-18-14-46-52-median-median-first-test/csv/FIRST_RUN.csv"), spots, intensity);
-		
-		
+		// TODO: REMOVE hardcode!
+		// BatchProcess.saveResult(new
+		// File("/Users/kkolyva/Desktop/2018-04-18-08-29-25-test/test/2018-04-18-14-46-52-median-median-first-test/csv/FIRST_RUN.csv"),
+		// spots, intensity);
+
 		// TODO: z-correct the intensities and return them here, too
 		if (doZcorrection) {
-			for(int j = 0; j < spots.size(); j++) {
+			for (int j = 0; j < spots.size(); j++) {
 				float z = spots.get(j).getFloatPosition(numDimensions - 1);
 				float I = intensity.get(j);
 
-				double fixFactor = linearFunc(zMin, slope, intercept) / linearFunc(z, slope, intercept);
-				intensity.set(j, (float)(I*fixFactor));
-			} 
+				double fixFactor = linearFunc(zMin, slope, intercept) / linearFunc(z,
+					slope, intercept);
+				intensity.set(j, (float) (I * fixFactor));
+			}
 		}
 
 		return ImageJFunctions.wrap(img, "");
 	}
 
-	public static ImagePlus fixIntensitiesOnlySpots(ImagePlus imp, File spotsFirstRunFilename) {
+	public static ImagePlus fixIntensitiesOnlySpots(ImagePlus imp,
+		File spotsFirstRunFilename)
+	{
 		Img<FloatType> img = ImageJFunctions.wrap(imp);
 
 		// System.out.println(ip.getWidth() + " : " + ip.getHeight());
 		// System.out.println(imp.getWidth() + " : " + imp.getHeight());
 
 		// we expect this values to be in the ROI
-		ArrayList<float []> zI = readCsv(spotsFirstRunFilename);
+		ArrayList<float[]> zI = readCsv(spotsFirstRunFilename);
 
 		// fitting part
 		boolean includeIntercept = true; // use constant term
@@ -535,24 +581,23 @@ public class ExtraPreprocess {
 
 		double zMin = Double.MAX_VALUE;
 
-		//		for (float [] item : zI) {
-		//			float z = item[0];
-		//			float I = item[1];
-		//			sr.addData(z, I);
-		//			if (z < zMin)
-		//				zMin = z;
-		//		}
+		// for (float [] item : zI) {
+		// float z = item[0];
+		// float I = item[1];
+		// sr.addData(z, I);
+		// if (z < zMin)
+		// zMin = z;
+		// }
 
-		ArrayList<float[]> medianZI =  getMedianPerSlice(zI,img.dimension(numDimensions - 1));
+		ArrayList<float[]> medianZI = getMedianPerSlice(zI, img.dimension(
+			numDimensions - 1));
 
-		for (float [] item : medianZI) {
+		for (float[] item : medianZI) {
 			float z = item[0];
 			float I = item[1];
 			sr.addData(z, I);
-			if (z < zMin)
-				zMin = z;
+			if (z < zMin) zMin = z;
 		}
-
 
 		double slope = sr.getSlope();
 		double intercept = sr.getIntercept();
@@ -563,61 +608,63 @@ public class ExtraPreprocess {
 		System.out.println("zMin:" + zMin);
 		System.out.println("params are:" + slope + " : " + intercept);
 
-
 		Cursor<FloatType> c = img.cursor();
 
-		while(c.hasNext()) {
+		while (c.hasNext()) {
 			c.fwd();
 
 			int z = c.getIntPosition(2);
 			float I = c.get().get();
-			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
+			double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+				intercept);
 
 			NumberFormat formatter = new DecimalFormat("0.#####E0");
-			// System.out.println(formatter.format((float)(I)) +" => " + formatter.format((float)(I + dI)));
+			// System.out.println(formatter.format((float)(I)) +" => " +
+			// formatter.format((float)(I + dI)));
 
-			c.get().set((float)(I + dI));
+			c.get().set((float) (I + dI));
 		}
 
 		return imp;
 	}
 
-
-	public static float calculateMedianIntensity(Img<FloatType> img, Img<FloatType> mask) {
+	public static float calculateMedianIntensity(Img<FloatType> img,
+		Img<FloatType> mask)
+	{
 		int numDimensions = img.numDimensions();
-		float [] medianPerPlane = new float[(int) img.dimension(numDimensions -1)];
+		float[] medianPerPlane = new float[(int) img.dimension(numDimensions - 1)];
 		// FIXME: dirty hack because masks are one pixel short
 		RandomAccess<FloatType> ra = Views.extendMirrorSingle(mask).randomAccess();
-		
-		for (int z = 0; z < img.dimension(numDimensions -1); z++) {
-			final Cursor< FloatType > cursor = Views.hyperSlice(img, numDimensions - 1, z).cursor();
+
+		for (int z = 0; z < img.dimension(numDimensions - 1); z++) {
+			final Cursor<FloatType> cursor = Views.hyperSlice(img, numDimensions - 1,
+				z).cursor();
 			ArrayList<Float> pixels = new ArrayList<>();
-			
-			long [] position = new long [numDimensions - 1];
-			
-			while(cursor.hasNext()) {
+
+			long[] position = new long[numDimensions - 1];
+
+			while (cursor.hasNext()) {
 				cursor.fwd();
-				
+
 				cursor.localize(position);
 				ra.setPosition(position);
-				
-				if (ra.get().get() > 0)
-					pixels.add(cursor.get().get());
-				
+
+				if (ra.get().get() > 0) pixels.add(cursor.get().get());
+
 			}
 			Collections.sort(pixels);
 			medianPerPlane[z] = pixels.get(pixels.size() / 2);
 		}
-		
+
 		Arrays.sort(medianPerPlane);
 		float medianMedianPerPlane = medianPerPlane[medianPerPlane.length / 2];
 
 		System.out.println("medianMedianPerPlane: " + medianMedianPerPlane);
 
 		return medianMedianPerPlane;
-		
+
 	}
-	
+
 	// TODO: OLD REMOVE
 	public static float calculateMedianIntensity(ImagePlus imp) {
 		// used for iterating
@@ -628,18 +675,18 @@ public class ExtraPreprocess {
 		// System.out.println(ip.getWidth() + " : " + ip.getHeight());
 		// System.out.println(imp.getWidth() + " : " + imp.getHeight());
 
-		float [] medianPerPlane = new float[imp.getNSlices()];
+		float[] medianPerPlane = new float[imp.getNSlices()];
 
 		// System.out.println(bounds.x + " : " + bounds.y);
 		// will be used for median filtering
 		// float [] pixels = new float [(int)(img.dimension(0)*img.dimension(1))];
 
-		for(int z = 0; z < img.dimension(2); z++) {
+		for (int z = 0; z < img.dimension(2); z++) {
 			// iterator over the slice
-			final Cursor< FloatType > cursor = Views.hyperSlice(img, 2, z).cursor();
+			final Cursor<FloatType> cursor = Views.hyperSlice(img, 2, z).cursor();
 			ArrayList<Float> pixels = new ArrayList<>();
 
-			while(cursor.hasNext()) {
+			while (cursor.hasNext()) {
 				cursor.fwd();
 
 				int x = cursor.getIntPosition(0) - bounds.x;
@@ -653,7 +700,6 @@ public class ExtraPreprocess {
 			Collections.sort(pixels);
 			medianPerPlane[z] = pixels.get(pixels.size() / 2);
 		}
-
 
 		Arrays.sort(medianPerPlane);
 		float medianMedianPerPlane = medianPerPlane[medianPerPlane.length / 2];
@@ -686,7 +732,6 @@ public class ExtraPreprocess {
 		return img;
 	}
 
-
 	public static ImagePlus multiplyByValue(ImagePlus imp, float value) {
 		Img<FloatType> img = ImageJFunctions.wrap(imp);
 		Cursor<FloatType> cursor = img.cursor();
@@ -713,7 +758,7 @@ public class ExtraPreprocess {
 		// System.out.println(ip.getWidth() + " : " + ip.getHeight());
 		// System.out.println(imp.getWidth() + " : " + imp.getHeight());
 
-		float [] medianPerPlane = new float[imp.getNSlices()];
+		float[] medianPerPlane = new float[imp.getNSlices()];
 
 		// System.out.println(bounds.x + " : " + bounds.y);
 		// will be used for median filtering
@@ -722,11 +767,11 @@ public class ExtraPreprocess {
 		double zMin = Double.MAX_VALUE;
 
 		final Cursor<FloatType> cursor = img.cursor();
-		while(cursor.hasNext()) {
+		while (cursor.hasNext()) {
 			cursor.fwd();
 
 			int x = cursor.getIntPosition(0) - bounds.x;
-			int y = cursor.getIntPosition(1) - bounds.y; 
+			int y = cursor.getIntPosition(1) - bounds.y;
 			// check that the pixil is inside of the roi
 			if (ip != null && ip.getPixel(x, y) != 0) {
 				int z = cursor.getIntPosition(2);
@@ -734,8 +779,7 @@ public class ExtraPreprocess {
 				sr.addData(z, I);
 
 				// looking for min z
-				if (z < zMin)
-					zMin = z;
+				if (z < zMin) zMin = z;
 			}
 		}
 
@@ -750,7 +794,7 @@ public class ExtraPreprocess {
 
 		cursor.reset();
 
-		while(cursor.hasNext()) {
+		while (cursor.hasNext()) {
 			cursor.fwd();
 
 			int x = cursor.getIntPosition(0) - bounds.x;
@@ -760,12 +804,13 @@ public class ExtraPreprocess {
 
 				int z = cursor.getIntPosition(2);
 				float I = cursor.get().get();
-				double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope, intercept);
+				double dI = linearFunc(zMin, slope, intercept) - linearFunc(z, slope,
+					intercept);
 
 				NumberFormat formatter = new DecimalFormat("0.#####E0");
 				// System.out.println(formatter.format((float)(dI)));
 
-				cursor.get().set((float)(I + dI));
+				cursor.get().set((float) (I + dI));
 			}
 		}
 
@@ -778,13 +823,13 @@ public class ExtraPreprocess {
 	}
 
 	// return y for y = a*x*x + b*x + c
-	public static double polyFunc(double x, double [] a) {
+	public static double polyFunc(double x, double[] a) {
 		double y = 0;
 		for (int j = 0; j < a.length; j++)
-			y += Math.pow(x, j)*a[j];
+			y += Math.pow(x, j) * a[j];
 		return y;
 	}
-	
+
 	public static void medianOfMedian(File filepath, File outpath) {
 		ImagePlus imp = IJ.openImage(filepath.getAbsolutePath());
 		float medianMedianPerPlane = calculateMedianIntensity(imp);
@@ -796,7 +841,6 @@ public class ExtraPreprocess {
 		FileSaver fs = new FileSaver(pImp);
 		fs.saveAsTiff(outpath.getAbsolutePath());
 	}
-
 
 	public static void main(String[] args) {
 		new ImageJ();
@@ -812,7 +856,7 @@ public class ExtraPreprocess {
 		float medianMedianPerPlane = calculateMedianIntensity(imp);
 		ImagePlus pImp = subtractValue(imp, medianMedianPerPlane);
 
-		float scalingFactor = 1/(1 - medianMedianPerPlane);
+		float scalingFactor = 1 / (1 - medianMedianPerPlane);
 		pImp = multiplyByValue(pImp, scalingFactor);
 
 		// run the z-dependent fix only on the pixels inside of the roi
